apps/dummy-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  namespace: dummy-app
  labels:
    app: dummy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      imagePullSecrets:
        - name: example-registry
      containers:
        - name: dummy-app
          image: docker.example.com/dummy-app
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
