apps/dummy-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app
  namespace: dummy-app
spec:
  type: ClusterIP
  ports:
    - name: dummy-app
      protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: dummy-app
