apps/dummy-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dummy-app
  namespace: dummy-app
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dummy-app.example.com
      secretName: dummy-app-example-com-tls
  rules:
    - host: dummy-app.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: dummy-app
              servicePort: 4000
